# spaeti

./: .coveragerc  .gitignore  .isort.cfg  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  example.env  flake8.ini  nginx.conf  playwright.Dockerfile  pyproject.toml  pytest.ini  spaeti.Dockerfile  tox.ini
scripts/: collect-static  manage.py  run-server
spaeti/: __init__.py  apps.py  components.py  database.py  forms.py  routes.py  settings.py  utils.py
spaeti/_django/: settings.py  urls.py  wsgi.py
spaeti/admin/: __init__.py  account.py  account_transaction.py  bank_account.py  bank_account_transaction.py  person.py  price_change.py  product.py  product_category.py  product_transaction.py
spaeti/lona_django/: __init__.py  attribute_table.py  form.py  middlewares.py  static_files.py  table.py
spaeti/lona_django/static/lona-django/: style.css
spaeti/migrations/: 0001_initial.py  0002_auto_20230604_1841.py
spaeti/models/: __init__.py  account.py  account_transaction.py  bank_account.py  bank_account_transaction.py  person.py  price_change.py  product.py  product_category.py  product_transaction.py
spaeti/static/: spaeti.css
spaeti/views/: account_add.py  account_delete.py  account_deposit_money.py  account_edit.py  account_list.py  account_show.py  generic.py  home.py  product_add.py  product_buy.py  product_change_price.py  product_delete.py  product_edit.py  product_list.py  product_restock.py  product_show.py
tests/: conftest.py  test_0001_test_suite.py  test_0002_database_functions.py
