[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
version = "0.0"
name = "spaeti"
description = ""

authors = [
  { name="Florian Scherf", email="mail@florianscherf.de" },
]

license = { file="LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "lona@git+https://github.com/lona-web-org/lona.git@master",
  "lona-picocss==0.4",
  "lona-django==0.1.1",
  "aiohttp-wsgi==0.10.0",
  "django>=3.2,<3.3",
  "psycopg2-binary",
]


[project.optional-dependencies]
dev = [

  # linting
  "flake8==6.0.0",
  "flake8-length==0.3.1",
  "isort==5.12.0",

  # testing
  "tox",
  "coverage",
  "pytest==7.3.1",
  "pytest-aiohttp==1.0.4",
  "pytest-timeout==2.1.0",
  "pytest-django==4.5.2",
  "playwright==1.34.0",

  # packaging
  "build",
  "twine",
]


[tool.setuptools]
include-package-data = true

script-files = [
  "bin/spaeti-django-admin",
]


[tool.setuptools.packages.find]
include = ["spaeti*"]


[tool.setuptools.package-data]
"spaeti.static" = ["**"]
"spaeti.templates" = ["**"]


[tool.setuptools.exclude-package-data]
"*" = [
  ".*",
  "~*",
  "*.swp",
  "*.pyc",
]
